--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ZDeutsch | Zadelkhair Deutsch </title>
+    <title>ZDeutsch | Zadelkhair Deutsch</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&family=Newsreader:wght@400;500;600&display=swap">
     <script>
       tailwind.config = {
@@ -72,230 +72,7 @@
       };
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-      :root {
-        --flag-black: #1a1a1a;
-        --flag-red: #d50000;
-        --flag-gold: #ffcc00;
-        --flag-gold-dark: #c69300;
-        --flag-gold-soft: #fff5cc;
-        --flag-red-soft: #ffe5e5;
-        --flag-green: #1b7f3b;
-        --flag-green-soft: #e6f6ec;
-        --flag-stone-50: #f9f7f2;
-        --flag-stone-100: #f1eee7;
-        --flag-stone-200: #e8e2d6;
-        --flag-stone-300: #d8cdbb;
-        --flag-border: #e2d9c4;
-        --flag-muted: #5f6165;
-        --font-scale: 1;
-        --aside-width: 40%;
-      }
-
-      html {
-        font-size: 16px;
-      }
-
-      #home-view,
-      #exam-view {
-        font-size: calc(1rem * var(--font-scale));
-      }
-
-      #home-view .text-xs,
-      #exam-view .text-xs {
-        font-size: calc(0.75rem * var(--font-scale));
-      }
-
-      #home-view .text-sm,
-      #exam-view .text-sm {
-        font-size: calc(0.875rem * var(--font-scale));
-      }
-
-      #home-view .text-base,
-      #exam-view .text-base {
-        font-size: calc(1rem * var(--font-scale));
-      }
-
-      #home-view .text-lg,
-      #exam-view .text-lg {
-        font-size: calc(1.125rem * var(--font-scale));
-      }
-
-      #home-view .text-xl,
-      #exam-view .text-xl {
-        font-size: calc(1.25rem * var(--font-scale));
-      }
-
-      #home-view .text-2xl,
-      #exam-view .text-2xl {
-        font-size: calc(1.5rem * var(--font-scale));
-      }
-
-      #home-view .text-3xl,
-      #exam-view .text-3xl {
-        font-size: calc(1.875rem * var(--font-scale));
-      }
-
-      #home-view .text-\[10px\],
-      #exam-view .text-\[10px\] {
-        font-size: calc(10px * var(--font-scale));
-      }
-
-      @media (min-width: 1024px) {
-        #exam-grid {
-          grid-template-columns: minmax(0, calc(100% - var(--aside-width))) minmax(0, var(--aside-width));
-        }
-      }
-
-      #left-panel p {
-        text-align: justify;
-        text-justify: inter-word;
-      }
-
-      body.theme-body {
-        color: var(--flag-black);
-        background: linear-gradient(135deg, #ffffff 0%, #fff5cc 45%, #ffe5e5 100%);
-      }
-
-      .flag-glow-top {
-        background: radial-gradient(circle at top, rgba(213, 0, 0, 0.18), transparent 60%);
-      }
-
-      .flag-glow-bottom {
-        background: radial-gradient(circle at 20% 80%, rgba(255, 204, 0, 0.22), transparent 60%);
-      }
-
-      .grid-overlay {
-        background-image: linear-gradient(rgba(26, 26, 26, 0.05) 1px, transparent 1px),
-          linear-gradient(90deg, rgba(26, 26, 26, 0.05) 1px, transparent 1px);
-        background-size: 46px 46px;
-        opacity: 0.35;
-      }
-
-      .bg-stone-50 {
-        background-color: var(--flag-stone-50) !important;
-      }
-
-      .bg-stone-100 {
-        background-color: var(--flag-stone-100) !important;
-      }
-
-      .bg-stone-200 {
-        background-color: var(--flag-stone-200) !important;
-      }
-
-      .bg-white {
-        background-color: #ffffff !important;
-      }
-
-      .bg-white\/80 {
-        background-color: rgba(255, 255, 255, 0.88) !important;
-      }
-
-      .bg-white\/90 {
-        background-color: rgba(255, 255, 255, 0.94) !important;
-      }
-
-      .bg-azure {
-        background-color: var(--flag-gold) !important;
-      }
-
-      .bg-azure\/10 {
-        background-color: var(--flag-gold-soft) !important;
-      }
-
-      .bg-mint\/10 {
-        background-color: var(--flag-green-soft) !important;
-      }
-
-      .bg-mint\/20 {
-        background-color: var(--flag-green-soft) !important;
-      }
-
-      .bg-rose\/10,
-      .bg-rose\/15 {
-        background-color: var(--flag-red-soft) !important;
-      }
-
-      .border-stone-200 {
-        border-color: var(--flag-stone-200) !important;
-      }
-
-      .border-stone-300 {
-        border-color: var(--flag-stone-300) !important;
-      }
-
-      .border-azure\/30,
-      .border-azure\/40,
-      .border-azure\/50,
-      .border-azure\/60 {
-        border-color: var(--flag-gold-dark) !important;
-      }
-
-      .border-mint\/30,
-      .border-mint\/40,
-      .border-mint\/50,
-      .border-mint\/60 {
-        border-color: var(--flag-green) !important;
-      }
-
-      .border-rose\/30,
-      .border-rose\/40,
-      .border-rose\/50 {
-        border-color: var(--flag-red) !important;
-      }
-
-      .border-black\/20 {
-        border-color: var(--flag-border) !important;
-      }
-
-      .text-azure {
-        color: var(--flag-gold-dark) !important;
-      }
-
-      .text-mint {
-        color: var(--flag-green) !important;
-      }
-
-      .text-rose {
-        color: var(--flag-red) !important;
-      }
-
-      .text-white {
-        color: var(--flag-black) !important;
-      }
-
-      .ring-azure\/20 {
-        --tw-ring-color: rgba(255, 204, 0, 0.35) !important;
-      }
-
-      .ring-azure\/30 {
-        --tw-ring-color: rgba(255, 204, 0, 0.5) !important;
-      }
-
-      .shadow-panel {
-        box-shadow: 0 24px 60px rgba(26, 26, 26, 0.12) !important;
-      }
-
-      .shadow-lg {
-        box-shadow: 0 16px 28px rgba(26, 26, 26, 0.18) !important;
-      }
-
-      * {
-        scrollbar-width: thin;
-        scrollbar-color: rgba(26, 26, 26, 0.2) transparent;
-      }
-      *::-webkit-scrollbar {
-        width: 8px;
-      }
-      *::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      *::-webkit-scrollbar-thumb {
-        background: rgba(26, 26, 26, 0.18);
-        border-radius: 999px;
-      }
-    </style>
+    <link rel="stylesheet" href="theme.css">
   </head>
   <body class="theme-body font-body min-h-screen">
     <div class="fixed inset-0">
@@ -307,13 +84,9 @@
     <div class="relative min-h-screen">
       <header class="fixed top-0 left-0 right-0 h-16 border-b border-black/10 bg-white/90 backdrop-blur-md shadow-sm z-40">
         <div class="w-full h-full px-6 flex items-center justify-between gap-4">
-          <div id="header-left" class="flex items-center gap-3 shrink-0">
+          <div class="flex items-center gap-3 shrink-0">
             <img id="brand-logo" src="logo.svg" alt="ZDeutsch" class="h-16 w-auto">
-            <button id="back-btn" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm">
-              <i data-lucide="arrow-left" class="h-4 w-4" aria-hidden="true"></i>
-            </button>
-            <span id="return-label" class="text-xs font-display uppercase tracking-[0.2em] text-slate">Return</span>
-            <div id="header-divider" class="h-6 w-px bg-black/10"></div>
+            <div class="h-6 w-px bg-black/10"></div>
             <div id="header-title">
               <div class="flex items-center gap-2">
                 <h1 id="theme-title" class="font-display text-base">Select a theme</h1>
@@ -321,37 +94,8 @@
               </div>
             </div>
           </div>
-          <div class="flex-1 min-w-0 flex items-center">
-            <div id="part-cards" class="hidden w-full flex items-center justify-start gap-2 overflow-x-auto"></div>
-          </div>
-          <div class="flex items-center gap-2 shrink-0">
-            <div id="timer-display" class="hidden items-center gap-2 rounded-full border border-azure/40 bg-azure/10 px-3 py-1 text-[10px] font-display uppercase tracking-[0.2em] text-azure">
-              <span id="timer-value">90:00</span>
-            </div>
-            <button id="settings-btn" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm">
-              <i data-lucide="settings" class="h-4 w-4" aria-hidden="true"></i>
-            </button>
-          </div>
         </div>
       </header>
-
-      <div id="settings-panel" class="fixed top-20 right-6 w-64 rounded-2xl border border-stone-300 bg-white/95 shadow-panel p-4 hidden z-40">
-        <div class="text-xs uppercase tracking-[0.2em] text-slate font-display">Settings</div>
-        <div class="mt-4">
-          <div class="flex items-center justify-between text-xs text-slate font-display uppercase tracking-[0.2em]">
-            <span>Font size</span>
-            <span id="font-size-value">100%</span>
-          </div>
-          <input id="font-size-input" type="range" min="0.85" max="1.25" step="0.05" value="1" class="mt-3 w-full">
-        </div>
-        <div class="mt-4 border-t border-stone-200 pt-4">
-          <label class="flex items-center justify-between text-xs text-slate font-display uppercase tracking-[0.2em]">
-            <span>Timer</span>
-            <input id="timer-toggle" type="checkbox" class="h-4 w-4">
-          </label>
-          <p class="mt-2 text-[10px] text-slate">90 min countdown (auto-finish).</p>
-        </div>
-      </div>
 
       <section id="home-view" class="pt-24 pb-16 px-6 relative">
         <div id="home-loader" class="hidden absolute inset-0 z-10 flex items-center justify-center">
@@ -365,9 +109,8 @@
             <div class="flex flex-col gap-6 lg:flex-row lg:items-end lg:justify-between">
               <div class="space-y-2">
                 <p class="font-display text-xs uppercase tracking-[0.3em] text-slate">Zadelkhair Deutsch Exam Library</p>
-                <!-- <h2 class="text-3xl font-display">Select your exam</h2> -->
-                 <h2 class="text-3xl font-display">Wähle dein Prüfungsthema</h2>
-                 <p> Prepare for your TELC language exam for <span class="font-bold text-azure" >FREE!</span> </p>
+                <h2 class="text-3xl font-display">Wähle dein Prüfungsthema</h2>
+                <p>Prepare for your TELC language exam for <span class="font-bold text-azure">FREE!</span></p>
               </div>
               <div class="flex flex-col gap-4 sm:flex-row sm:items-end">
                 <div>
@@ -401,53 +144,6 @@
           </div>
         </div>
       </section>
-
-      <main id="exam-view" class="hidden pt-20 pb-20 px-6">
-        <div class="w-full">
-        <div id="exam-grid" class="grid gap-6 h-[calc(100vh-160px)]">
-            <section id="left-panel" class="rounded-3xl border border-stone-300 bg-white/90 shadow-panel p-6 overflow-y-auto"></section>
-            <aside id="right-panel" class="rounded-3xl border border-stone-300 bg-white/90 shadow-panel p-6 overflow-y-auto"></aside>
-          </div>
-        </div>
-      </main>
-
-      <section id="result-view" class="hidden pt-24 pb-24 px-6">
-        <div class="w-full">
-          <div class="rounded-3xl border border-stone-300 bg-white/90 shadow-panel p-8">
-            <div class="flex items-center justify-between gap-4">
-              <p class="font-display text-xs uppercase tracking-[0.3em] text-slate">Exam results</p>
-              <img src="logo.svg" alt="ZDeutsch" class="h-8 w-auto">
-            </div>
-            <h2 id="result-title" class="mt-3 text-3xl font-display">Results</h2>
-            <p id="result-subtitle" class="mt-2 text-slate">Your score overview.</p>
-
-            <div id="result-summary" class="mt-6"></div>
-
-            <div class="mt-8">
-              <div class="text-xs uppercase tracking-[0.2em] text-slate font-display">Detailed scores</div>
-              <div id="result-breakdown" class="mt-4 space-y-3"></div>
-            </div>
-
-            <div class="mt-8 flex flex-wrap gap-3">
-              <button id="result-retry-btn" class="rounded-full border border-black/10 bg-white px-5 py-2 text-xs font-display uppercase tracking-[0.2em] text-slate shadow-sm">Retry exam</button>
-              <button id="result-home-btn" class="rounded-full bg-azure px-5 py-2 text-xs font-display uppercase tracking-[0.2em] text-white shadow-lg">Back to modules</button>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <footer id="footer" class="fixed bottom-0 left-0 right-0 h-16 border-t border-black/10 bg-white/90 backdrop-blur-md shadow-sm">
-        <div class="w-full h-full px-6 flex items-center justify-between">
-          <div class="flex items-center gap-3">
-            <img id="footer-logo" src="logo.svg" alt="ZDeutsch" class="h-8 w-auto">
-            <div id="progress-dots" class="hidden flex items-center gap-2"></div>
-          </div>
-          <div class="flex items-center gap-3">
-            <button id="prev-btn" class="rounded-full border border-black/10 bg-white px-4 py-2 text-xs font-display uppercase tracking-[0.2em] text-slate">Zurück</button>
-            <button id="next-btn" class="rounded-full bg-azure px-5 py-2 text-xs font-display uppercase tracking-[0.2em] text-white">Weiter</button>
-          </div>
-        </div>
-      </footer>
     </div>
 
     <div id="version-modal" class="fixed inset-0 z-50 hidden">
@@ -468,6 +164,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://unpkg.com/lucide@0.471.0/dist/umd/lucide.min.js"></script>
-    <script src="app.js"></script>
+    <script src="shared.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
