--- a/horen.html
+++ b/horen.html
@@ -143,6 +143,15 @@
         <p class="mt-3 text-xs uppercase tracking-[0.3em] text-ink font-display">Bitte beantworten Sie alle Aussagen.</p>
       </div>
 
+      <div id="search-bar-container" class="mb-6">
+        <input 
+          id="horen-topic-search" 
+          type="text" 
+          placeholder="Search topics..." 
+          class="w-full px-4 py-2 border border-stone-300 rounded-xl bg-white text-sm placeholder-slate focus:outline-none focus:border-azure focus:ring-2 focus:ring-azure/20"
+        >
+      </div>
+
       <section id="horen-content" class="space-y-8 mt-2"></section>
       <section id="horen-summary" class="hidden mt-10"></section>
     </main>
