fix horen next button

--- a/horen.html
+++ b/horen.html
@@ -163,9 +163,9 @@
           <span id="horen-progress" class="hidden text-[10px] font-display uppercase tracking-[0.2em] text-slate"></span>
         </div>
         <div class="flex items-center gap-2">
-          <button id="horen-prev-btn" class="hidden rounded-full border border-stone-300 bg-white px-4 py-2 text-xs font-display uppercase tracking-[0.2em] text-slate">Prev</button>
-          <button id="horen-next-btn" class="hidden rounded-full border border-stone-300 bg-white px-4 py-2 text-xs font-display uppercase tracking-[0.2em] text-slate">Next</button>
-          <button id="horen-check-btn" class="rounded-full bg-azure px-4 py-2 text-xs font-display uppercase tracking-[0.2em] text-white">Check all</button>
+          <button id="horen-prev-btn" class="hidden rounded-full border border-stone-300 bg-white px-4 py-2 text-xs font-display uppercase tracking-[0.2em] text-slate">Zurück</button>
+          <button id="horen-next-btn" class="hidden rounded-full border border-stone-300 bg-white px-4 py-2 text-xs font-display uppercase tracking-[0.2em] text-slate">Weiter</button>
+          <button id="horen-check-btn" class="rounded-full bg-azure px-4 py-2 text-xs font-display uppercase tracking-[0.2em] text-white">Alle prüfen</button>
         </div>
       </div>
     </footer>
