--- a/lesen.html
+++ b/lesen.html
@@ -105,6 +105,9 @@
             <div id="timer-display" class="hidden items-center gap-2 rounded-full border border-azure/40 bg-azure/10 px-3 py-1 text-[10px] font-display uppercase tracking-[0.2em] text-azure">
               <span id="timer-value">90:00</span>
             </div>
+            <button id="aside-toggle" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm md:hidden" aria-label="Open sidebar" aria-controls="right-panel" aria-expanded="false">
+              <i data-lucide="layout" class="h-4 w-4" aria-hidden="true"></i>
+            </button>
             <button id="settings-btn" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm">
               <i data-lucide="settings" class="h-4 w-4" aria-hidden="true"></i>
             </button>
@@ -132,9 +135,9 @@
 
       <main id="exam-view" class="pt-20 pb-20 px-6">
         <div class="w-full">
-          <div id="exam-grid" class="grid gap-6 h-[calc(100vh-160px)]">
-            <section id="left-panel" class="rounded-3xl border border-stone-300 bg-white/90 shadow-panel p-6 overflow-y-auto"></section>
-            <aside id="right-panel" class="rounded-3xl border border-stone-300 bg-white/90 shadow-panel p-6 overflow-y-auto"></aside>
+          <div id="exam-grid" class="grid gap-6 h-[calc(100vh-160px)] grid-cols-1 md:grid-cols-3">
+            <section id="left-panel" class="rounded-3xl border border-stone-300 bg-white/90 shadow-panel p-6 overflow-y-auto md:col-span-2"></section>
+            <aside id="right-panel" role="complementary" aria-hidden="true" class="rounded-3xl border border-stone-300 bg-white/90 shadow-panel p-6 overflow-y-auto hidden md:block md:col-span-1"></aside>
           </div>
         </div>
       </main>
@@ -177,6 +180,7 @@
         </div>
       </footer>
     </div>
+    <div id="aside-overlay" class="fixed inset-0 bg-black/40 z-40 hidden"></div>
 
     <script src="https://unpkg.com/lucide@0.471.0/dist/umd/lucide.min.js"></script>
     <script src="shared.js"></script>
