--- a/horen.html
+++ b/horen.html
@@ -83,34 +83,44 @@
       <div class="absolute inset-0 grid-overlay"></div>
     </div>
 
-    <header class="fixed top-0 left-0 right-0 h-16 border-b border-black/10 bg-white/90 backdrop-blur-md shadow-sm z-40">
-      <div class="w-full h-full px-6 flex items-center justify-between gap-4">
-        <div id="header-left" class="flex items-center gap-3 shrink-0">
-          <button id="return-btn" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm">
-            <i data-lucide="arrow-left" class="h-4 w-4" aria-hidden="true"></i>
-          </button>
-          <span id="return-label" class="text-xs font-display uppercase tracking-[0.2em] text-slate">Return</span>
-          <div id="header-divider" class="h-6 w-px bg-black/10"></div>
-          <div id="header-title">
-            <div class="flex items-center gap-2">
-              <h1 id="theme-title" class="font-display text-base">Hören Codes</h1>
-              <span id="level-pill" class="rounded-full border border-azure/40 bg-azure/10 px-2 py-0.5 text-[10px] uppercase tracking-[0.2em] text-azure font-display">B1</span>
+    <header class="fixed top-0 left-0 right-0 border-b border-black/10 bg-white/90 backdrop-blur-md shadow-sm z-40">
+      <div class="w-full px-6 py-3 flex flex-col gap-2">
+        <div class="flex items-center justify-between gap-4">
+          <div id="header-left" class="flex items-center gap-3 shrink-0">
+            <button id="return-btn" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm">
+              <i data-lucide="arrow-left" class="h-4 w-4" aria-hidden="true"></i>
+            </button>
+            <span id="return-label" class="text-xs font-display uppercase tracking-[0.2em] text-slate">Return</span>
+            <div id="header-divider" class="h-6 w-px bg-black/10"></div>
+            <div id="header-title">
+              <div class="flex items-center gap-2">
+                <h1 id="theme-title" class="font-display text-base">Hören Codes</h1>
+                <span id="level-pill" class="rounded-full border border-azure/40 bg-azure/10 px-2 py-0.5 text-[10px] uppercase tracking-[0.2em] text-azure font-display">B1</span>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="flex-1 min-w-0 flex items-center">
-          <div id="part-cards" class="hidden w-full flex items-center justify-start gap-2 overflow-x-auto"></div>
-        </div>
-        <div class="flex items-center gap-2 shrink-0">
-          <div id="timer-display" class="hidden items-center gap-2 rounded-full border border-azure/40 bg-azure/10 px-3 py-1 text-[10px] font-display uppercase tracking-[0.2em] text-azure">
-            <span id="timer-value">90:00</span>
+          <div class="flex items-center gap-2 shrink-0">
+            <div id="timer-display" class="hidden items-center gap-2 rounded-full border border-azure/40 bg-azure/10 px-3 py-1 text-[10px] font-display uppercase tracking-[0.2em] text-azure">
+              <span id="timer-value">90:00</span>
+            </div>
+            <button 
+              id="hide-aussage-shortcut" 
+              class="hidden items-center gap-2 rounded-full border border-azure/40 bg-white px-3 py-2 text-[10px] font-display uppercase tracking-[0.2em] text-azure shadow-sm hover:bg-azure/5 transition-colors"
+              type="button"
+            >
+              <i data-lucide="eye-off" class="h-4 w-4" aria-hidden="true"></i>
+              <span class="whitespace-nowrap text-[9px]">Aussagen</span>
+            </button>
+            <button id="settings-btn" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm hover:bg-white transition-colors">
+              <i data-lucide="settings" class="h-4 w-4" aria-hidden="true"></i>
+            </button>
           </div>
-          <button id="settings-btn" class="h-9 w-9 rounded-xl border border-black/10 bg-white/80 text-slate flex items-center justify-center shadow-sm">
-            <i data-lucide="settings" class="h-4 w-4" aria-hidden="true"></i>
-          </button>
+        </div>
+        <div class="flex items-center gap-3 overflow-x-auto md:overflow-visible pb-1 md:pb-0 justify-center md:justify-center">
+          <div id="part-cards" class="hidden flex items-center justify-center gap-2 flex-wrap w-full shrink-0"></div>
         </div>
       </div>
-      <div id="settings-panel" class="fixed right-6 top-20 w-64 rounded-2xl border border-stone-300 bg-white/95 shadow-panel p-4 hidden z-40">
+      <div id="settings-panel" class="fixed right-6 top-24 w-64 rounded-2xl border border-stone-300 bg-white/95 shadow-panel p-4 hidden z-40">
         <div class="text-xs uppercase tracking-[0.2em] text-slate font-display">Settings</div>
         <div class="mt-4">
           <div class="flex items-center justify-between text-xs text-slate font-display uppercase tracking-[0.2em]">
@@ -134,7 +144,7 @@
       </div>
     </header>
 
-    <main class="relative z-10 max-w-6xl mx-auto px-4 pt-32 pb-32 sm:px-6">
+    <main class="relative z-10 max-w-6xl mx-auto px-4 pt-40 pb-32 sm:px-6">
       <div class="horen-callout mb-10">
         <p class="text-sm leading-relaxed">
           Sie hören ein Interview. Entscheiden Sie beim Hören, ob die Aussagen richtig oder falsch sind. Sie hören das
