--- a/horen.html
+++ b/horen.html
@@ -116,8 +116,8 @@
             </button>
           </div>
         </div>
-        <div class="flex items-center gap-3 overflow-x-auto md:overflow-visible pb-1 md:pb-0 justify-center md:justify-center">
-          <div id="part-cards" class="hidden flex items-center justify-center gap-2 flex-wrap w-full shrink-0"></div>
+        <div class="flex items-center gap-3 overflow-x-auto md:overflow-visible pb-2 md:pb-0 justify-center md:justify-center w-full">
+          <div id="part-cards" class="hidden flex items-center justify-center gap-2 flex-wrap shrink-0 py-1 max-w-full"></div>
         </div>
       </div>
       <div id="settings-panel" class="fixed right-6 top-24 w-64 rounded-2xl border border-stone-300 bg-white/95 shadow-panel p-4 hidden z-40">
@@ -144,7 +144,7 @@
       </div>
     </header>
 
-    <main class="relative z-10 max-w-6xl mx-auto px-4 pt-40 pb-32 sm:px-6">
+    <main class="relative z-10 max-w-6xl mx-auto px-4 pt-44 md:pt-40 pb-32 sm:px-6">
       <div class="horen-callout mb-10">
         <p class="text-sm leading-relaxed">
           Sie hören ein Interview. Entscheiden Sie beim Hören, ob die Aussagen richtig oder falsch sind. Sie hören das
